funtion sign up not message

--- a/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/Index.cshtml
@@ -199,7 +199,7 @@
                 <!--Filter Boby-->
                 <div class="panel-body">
                     <!--District Filter-->
-                    <select name="district" class="dropdown col-md-12 component_filter">
+                    <select name="district" class="dropdown col-md-12 component_filter" id="test">
                         <option selected value="0">--Chọn Quận--</option>
                         @foreach (var item in lstDistrict)
                         {
