--- a/PPCRental_Project/PPCRental_Project/Views/Account/Login.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model PPCRental_Project.Models.USER
+
 @{
     Layout = null;
     if (Session["UserID"] != null)
@@ -46,20 +47,69 @@
                 }
                 <button type="submit">Login</button>
             </form>
+
+
         </div>
         <div class="form">
             <h2>Create an account</h2>
-            <form>
-                <input type="text" placeholder="Email Address" />
-                <input type="password" placeholder="Password" />
-                <input type="email" placeholder="Full Name" />
-                <input type="tel" placeholder="Phone Number" />
-                <input type="text" placeholder="Address" />
-                <button type="submit">Register</button>
-            </form>
+                @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-horizontal">
+                        @Html.ValidationSummary(true)
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Email)
+                                @Html.ValidationMessageFor(model => model.Email)
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Password)
+                                @Html.ValidationMessageFor(model => model.Password)
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.FullName)
+                                @Html.ValidationMessageFor(model => model.FullName)
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Phone)
+                                @Html.ValidationMessageFor(model => model.Phone)
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Address)
+                                @Html.ValidationMessageFor(model => model.Address)
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Create" class="btn btn-default" />
+                            </div>
+                        </div>
+                    </div>
+                }
         </div>
         <div class="cta"><a href="http://andytran.me">Forgot your password?</a></div>
     </div>
+    
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://codepen.io/andytran/pen/vLmRVp.js'></script>
     <script src="~/Scripts/loginscripts.js"></script>
