--- a/PPCRental_Project/PPCRental_Project/Views/Home/About.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/About.cshtml
@@ -3,212 +3,172 @@
     Layout = null;
 }
 
-    <link id='contact-form-7-css' href="~/Content/wp-content/plugins/contact-form-7/includes/css/styles.css" rel="stylesheet" />
-    <link id='css-css' href="~/Content/wp-content/themes/vpwtheme/style.css" rel="stylesheet" />
-    <link id='css_5-css' href="~/Content/wp-content/themes/vpwtheme/css/skel.css" rel="stylesheet" />
-    <link id='css_6-css' href="~/Content/wp-content/themes/vpwtheme/css/style.css" rel="stylesheet" />
-    <link id='css_7-css' href="~/Content/wp-content/themes/vpwtheme/css/style-wide.css" rel="stylesheet" />
-    <link id='css_4-css' href="~/Content/wp-content/themes/vpwtheme/css/style-normal.css" rel="stylesheet" />
-    <link id='css_3-css' href="~/Content/wp-content/themes/vpwtheme/css/style_font.css" rel="stylesheet" />
-    <link id='css_2-css' href="~/Content/wp-content/themes/vpwtheme/css/voudoo-menu.css" rel="stylesheet" />
-    <link id='css_1-css' href="~/Content/wp-content/themes/vpwtheme/css/respon.css" rel="stylesheet" />
-    <link id='css_8-css' href="~/Content/wp-content/themes/vpwtheme/css/superslides.css" rel="stylesheet" />
-    
-    <script src="~/Content/wp-includes/js/jquery/jquery.js"></script>
-    <script src="~/Content/wp-includes/js/jquery/jquery-migrate.min.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/jquery.min.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/jquery.poptrox.min.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/jquery.scrolly.min.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/jquery.scrollex.min.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/skel.min.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/init.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/main.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/voudoo-menu.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/jquery.easing.1.3.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/jquery.animate-enhanced.min.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/jquery.superslides.js"></script>
-    <script src="~/Content/wp-content/themes/vpwtheme/js/jquery.js"></script>
-   
-    <script>
-        $(function () {
-            $('#slides').superslides({
-                pagination: false,
-                hashchange: true,
-            });
+<link id='contact-form-7-css' href="~/Content/wp-content/plugins/contact-form-7/includes/css/styles.css" rel="stylesheet" />
+<link id='css-css' href="~/Content/wp-content/themes/vpwtheme/style.css" rel="stylesheet" />
+<link id='css_5-css' href="~/Content/wp-content/themes/vpwtheme/css/skel.css" rel="stylesheet" />
+<link id='css_6-css' href="~/Content/wp-content/themes/vpwtheme/css/style.css" rel="stylesheet" />
+<link id='css_7-css' href="~/Content/wp-content/themes/vpwtheme/css/style-wide.css" rel="stylesheet" />
+<link id='css_4-css' href="~/Content/wp-content/themes/vpwtheme/css/style-normal.css" rel="stylesheet" />
+<link id='css_3-css' href="~/Content/wp-content/themes/vpwtheme/css/style_font.css" rel="stylesheet" />
+<link id='css_2-css' href="~/Content/wp-content/themes/vpwtheme/css/voudoo-menu.css" rel="stylesheet" />
+<link id='css_1-css' href="~/Content/wp-content/themes/vpwtheme/css/respon.css" rel="stylesheet" />
+<link id='css_8-css' href="~/Content/wp-content/themes/vpwtheme/css/superslides.css" rel="stylesheet" />
+
+<script src="~/Content/wp-includes/js/jquery/jquery.js"></script>
+<script src="~/Content/wp-includes/js/jquery/jquery-migrate.min.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/jquery.min.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/jquery.poptrox.min.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/jquery.scrolly.min.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/jquery.scrollex.min.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/skel.min.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/init.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/main.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/voudoo-menu.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/jquery.easing.1.3.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/jquery.animate-enhanced.min.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/jquery.superslides.js"></script>
+<script src="~/Content/wp-content/themes/vpwtheme/js/jquery.js"></script>
+
+<script>
+    $(function () {
+        $('#slides').superslides({
+            pagination: false,
+            hashchange: true,
         });
-    </script>
+    });
+</script>
 
 <!-- Menu -->
-    <div class="top_banner">
-        <div class="top_banner_content">
-            <!-- Header -->
-            <h1 id="logo"><a href="#"><img src="~/Images/logo.png" style="width:150px;height:45px"/></a></h1>
-            <!-- Nav -->
-            <div class="ml_menu">
-                <div id="voudoo-menu">
-                    <div class="menu-menu-chinh-container">
-                        <ul id="menu-menu-chinh" class="menutop">
-                            <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="/trang-chu/">Home</a></li>
-                            <li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36"><a href="/vi-tri/">About Us</a></li>
-                            <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35"><a href="/tien-ich/">Log In</a></li>
-                        </ul>
-                    </div>
+<div class="top_banner">
+    <div class="top_banner_content">
+        <!-- Header -->
+        <h1 id="logo"><a href="#"><img src="~/Images/logo.png" style="width:150px;height:50px" /></a></h1>
+        <!-- Nav -->
+        <div class="ml_menu">
+            <div id="voudoo-menu">
+                <div class="menu-menu-chinh-container">
+                    <ul id="menu-menu-chinh" class="menutop">
+                        <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="/trang-chu/">Home</a></li>
+                        <li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36"><a href="/vi-tri/">About Us</a></li>
+                        <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35"><a href="/tien-ich/">Log In</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
+        <a href="" style="margin-left:58%;" target="_blank">
+            <img src="~/Content/wp-content/themes/vpwtheme/images/facebook_menu.png" style="padding-top:10px" />
+            <img src="~/Content/wp-content/themes/vpwtheme/images/google-plus_menu.png" />
+            <img src="~/Content/wp-content/themes/vpwtheme/images/twitter_menu.png" />
+            <img src="~/Content/wp-content/themes/vpwtheme/images/linkedin_menu.png" />
+        </a>
     </div>
+</div>
 
 <!-- Pic 1 -->
-    <section id="work3" class="panel main style3 flag">
-        <div class=" content container chtk_nd " style="width:100% !important">
-            <div class="row 0% images">
-                <div class="image  from-top">
-                    <div class="intro_text"><img src="~/Content/wp-content/uploads/2017/01/text_intro.png" alt="http://Bình%20thanh" /></div>
+<section id="work3" class="panel main style3 flag">
+    <div class=" content container chtk_nd " style="width:100% !important">
+        <div class="row 0% images">
+            <div class="image  from-top">
+                <div class="intro_text">
+                    <img src="~/Content/wp-content/themes/vpwtheme/images/text_intro.png" />
                 </div>
             </div>
         </div>
-        <a href="#work2" class="button style2 down anchored">Next</a>
-    </section>
+    </div>
+    <a href="#work2" class="button style2 down anchored">Down</a>
+</section>
 
 <!-- Pic 2 -->
-    <section id="work2" class="panel main style3 flag">
-        <div class=" content container chtk_nd " style="width:98% !important; margin-right:2%">
-            <div class="stran">
-                <div class="row 0% images">
-                    <div class="image  from-right"> <img src="~/Content/wp-content/uploads/2017/01/chtk.png" alt="http://Khu%20vườn" /></div>
+<section id="work2" class="panel main style3 flag">
+    <div class=" content container chtk_nd " style="width:98% !important; margin-right:2%">
+        <div class="stran">
+            <div class="row 0% images">
+                <div class="image from-right">
+                    <img src="~/Content/wp-content/themes/vpwtheme/images/chtk.png" />
                 </div>
-                <div class="row 0% images">
-                    <div class="image fit from-left chtk ">
-                        <div class="chtk_nd_pl">
-                            <p>
-                                Đến với Lavita Garden, bạn sẽ đắm chìm<br />
-                                trong không gian thơ mộng của một khu vườn<br />
-                                tràn đầy sức sống. Hãy để một chồi non<br />
-                                vừa hé thơm dịu, một nhành hoa nở rộ ngát hương<br />
-                                của khu vườn dẫn lối cho tâm hồn bạn.
-                            </p>
-                            <p>
-                                Tại Lavita Garden, bạn sẽ được bình yên<br />
-                                bên tách trà chiều, cùng trò chuyện và tận hưởng<br />
-                                một cuộc sống thanh bình đáng mơ ước.
-                            </p>
-                        </div>
+            </div>
+            <div class="row 0% images">
+                <div class="image fit from-left chtk ">
+                    <div class="chtk_nd_pl">
+                        <p>
+                            PPC Rental là doanh nghiệp hoạt động chuyên nghiệp trong<br />
+                            lĩnh vực môi giới và tiếp thị bất động sản. Công ty được phát<br />
+                            triển dựa trên nền tảng là sự hiểu biết sâu sắc về thị trường <br />
+                            bất động sản, pháp luật và mối quan hệ vững chắc với các<br />
+                            nhà đầu tư bất động sản chuyên nghiệp tại Việt Nam và đặc <br />
+                            biệt tại Thành phố Hồ Chí Minh.
+                        </p>
+                        <p>
+                            Đến PPC Rental, bạn sẽ được xem nhiều loại bất động sản <br />
+                            với giá cực sốc.Bạn sẽ được tiếp cận trực tiếp với người bán<br />
+                            hạn chế qua trung gian.Chúng tôi luôn đề cao khách hàng và<br />
+                            chất lượng lên hàng đầu.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-        <a href="#work3" class="button style2 down up anchored" style="margin-left:-43px !important">Pre</a>
-        <a href="#work" class="button style2 down anchored" style="margin-left:0px !important">Next</a>
-    </section>
+    </div>
+    <a href="#work3" class="button style2 down up anchored" style="margin-left:-43px !important">Up</a>
+    <a href="#work" class="button style2 down anchored" style="margin-left:0px !important">Down</a>
+</section>
 
 <!-- Pic 3 -->
-    <section id="work" class="panel main style3 flag">
-        <div class="content container" style="width:100% !important">
-            <div class="row 0% images">
-                <div class="image fit from-right">
-                    <div class="nd_intro1">
-                        <p>
-                            THÔNG TIN DỰ ÁN:<br />
-                            Vị trí: Đường số 3, P.Trường Thọ, Q.Thủ Đức, TP.HCM<br />
-                            Diện tích đất toàn khu: 15.314,5m2<br />
-                            Diện tích khu đất chung cư: 9.581,7m2<br />
-                            Số block: 02<br />
-                            Tầng cao: 21<br />
-                            Tổng số căn hộ: 648 căn
-                        </p>
-                        <h1></h1>
-                    </div>
-                </div>
-                <div class="image fit from-right"> </div>
-            </div>
-        </div>
-        <a href="#work2" class="button style2 down up anchored" style="margin-left:-43px !important">Pre</a> <a href="#four" class="button style2 down anchored" style="margin-left:0px !important">Next</a>
-    </section>
+<section id="work" class="panel main style3 flag">
+    <div style="width:100%; margin:0 auto; height:100%" id="six_bg">
+        <div class="six_content_left" style="font-size:13px !important; line-height:18px">
 
-<!-- Pic 4 -->
-    <section id="four" class="main panel style2 left  dark fullscreen flag">
-        <div class="four_content_left">
-            <img src="wp-content/uploads/2017/01/text_vt.png">
+            <p><h1 style="font-family:'Segoe Marker';font-size:32px">Contact</h1></p>
             <p>
-                Tại Lavita Garden, chỉ vài bước chân là cư dân đã đến ngay<br />
-                ga số 10 - Bình Thái của tuyến metro Bến Thành - Suối Tiên.<br />
-                Khi tuyến metro này được đưa vào sử dụng sẽ kết nối Q.Thủ Đức,<br />
-                Q.2, Q.9 với trung tâm thành phố và các quận lân cận trong<br />
-                vài phút di chuyển. Tuyến metro được so sánh như mạch máu<br />
-                giao thông của TP.HCM sẽ giúp cư dân Lavita Garden dễ dàng<br />
-                tiếp cận các tiện ích hiện đại như: siêu thị Metro An Phú,<br />
-                Big C Cantavil, Parkson Cantavil, trường quốc tế BIS,...<br />
-                và nhanh chóng hòa mình vào nhịp sống năng động của thành phố.
+                <b><img src="~/Content/wp-content/themes/vpwtheme/images/home.png" /></b>
+                45 Tran Hung Dao Street, District 1, Ho Chi Minh City
             </p>
-
-
-            <!--<p><img src="images/text_vt1.png"></p>-->
+            <p>
+                <img src="~/Content/wp-content/themes/vpwtheme/images/phone-call.png" />
+                (028) 1234 5678
+            </p>
+            <p>
+                <img src="~/Content/wp-content/themes/vpwtheme/images/printer.png" />
+                (028) 1234 5678
+            </p>
+            <p>
+                <img src="~/Content/wp-content/themes/vpwtheme/images/mail.png" />
+                support@perfectproperty.vn
+            </p>
         </div>
-        <a href="#work" class="button style2 down up anchored" style="margin-left:-43px !important">Pre</a> <a href="#five" class="button style2 down anchored" style="margin-left:0px !important">Next</a>
-    </section>
-
-<!-- Pic 5 -->
-    <section id="six" class="main style2 dark fullscreen flag panel">
-        <div style="width:100%; margin:0 auto; height:100%" id="six_bg">
-            <div class="six_content_left" style="font-size:13px !important; line-height:18px">
-                <img src="wp-content/uploads/2017/01/lld.png">
-
-                <p><h1 style="font-family:Calibri;font-size:28px">Contact</h1></p>
-                <p>
-                    Address: 45 Tran Hung Dao Street, District 1, Ho Chi Minh City
-                </p>
-                <p>
-                    Phone number:(028) 1234 5678 
-                </p>
-                <p>
-                    Fax: (028) 1234 5678
-                </p>
-                <p>
-                    E-mail: support@perfectproperty.vn
-                </p>
-            </div>
-            <div class="six_content_right"> </div>
-        </div>
-        <a href="#five" class="button style2 down anchored" style="background-image:url(http://lavitagarden.com.vn/official/images/arrow_up.png); margin-left:-43px !important">Pre</a>
-    </section>
-
- 
-
-    <div class="flag1">
-        <img src=""  style="width :100%">
     </div>
-    <link href="http://hungthinhcorp.com.vn/src-popup/jAlert-v3.css" rel="stylesheet" type="text/css">
-    <script src="http://hungthinhcorp.com.vn/src-popup/jAlert-v3.js"></script>
+    <div class="image fit from-right"> </div>
+    <a href="#work2" class="button style2 down up anchored">UP</a>
+</section>
 
-    <div class="flag1 hotline">
-        1234567890<a href="" style="margin-left:10px;" target="_blank"><img src="wp-content/themes/vpwtheme/images/icon_fb.png" style=" width:auto !important"></a>
-    </div>
 <!-- Footer -->
-    <div class="footer ">
-        <div class="footer_content">
-            <!--<div class="footer_left">-->
-            <div style="float:left">
-                © Copyright 2017  PPC Rental - Competition<div style="float:right; padding-top:0px; margin-left:10px;" class="flag">
-
-                   
-            </div>
-            </div>
-            <div class="footer_right">
-                <div style="float:left"><strong>Hotline: (028) 1234 5678</strong></div>
-                <a href="" style="margin-left:10px;" target="_blank"><img src="wp-content/themes/vpwtheme/images/icon_fb.png" style="padding-top:3px;"></a>
+<div class="footer ">
+    <div class="footer_content">
+        <!--<div class="footer_left">-->
+        <div style="float:left">
+            © 2017 = PPC Rental<div style="float:right; padding-top:0px; margin-left:10px;" class="flag">
             </div>
         </div>
+        <div class="footer_right">
+            <div style="float:left"><strong>Hotline: (028) 1234 5678</strong></div>
+            <a href="" style="margin-left:10px;" target="_blank">
+                <img src="~/Content/wp-content/themes/vpwtheme/images/facebook.png" />
+                <img src="~/Content/wp-content/themes/vpwtheme/images/google-plus.png" />
+                <img src="~/Content/wp-content/themes/vpwtheme/images/linkedin.png" />
+                <img src="~/Content/wp-content/themes/vpwtheme/images/whatsapp.png" />
+                <img src="~/Content/wp-content/themes/vpwtheme/images/twitter.png" />
+            </a>
+        </div>
     </div>
+</div>
 
-
-
-    <script src="~/Content/wp-content/plugins/contact-form-7/includes/js/jquery.form.min.js"></script>
-    <script type='text/javascript'>
-        /* <![CDATA[ */
-        var _wpcf7 = { "recaptcha": { "messages": { "empty": "Please verify that you are not a robot." } } };
-        /* ]]> */
-    </script>
-    <script src="~/Content/wp-content/plugins/contact-form-7/includes/js/scripts.js"></script>
-    <script src="~/Content/wp-includes/js/wp-embed.min.js"></script>
+<script src="~/Content/wp-content/plugins/contact-form-7/includes/js/jquery.form.min.js"></script>
+<script type='text/javascript'>
+    /* <![CDATA[ */
+    var _wpcf7 = { "recaptcha": { "messages": { "empty": "Please verify that you are not a robot." } } };
+    /* ]]> */
+</script>
+<script src="~/Content/wp-content/plugins/contact-form-7/includes/js/scripts.js"></script>
+<script src="~/Content/wp-includes/js/wp-embed.min.js"></script>
 
 
