Change Font Picture About US

--- a/PPCRental_Project/PPCRental_Project/Content/wp-content/themes/vpwtheme/css/voudoo-menu.css
+++ b/PPCRental_Project/PPCRental_Project/Content/wp-content/themes/vpwtheme/css/voudoo-menu.css
@@ -33,7 +33,7 @@ nav {
 }
 
 #voudoo-menu ul:first-child li a:hover,#voudoo-menu ul li a.selected {
-color:#fff;
+color:#8c8c8c;
   border-bottom:3px solid #97e329;
 
   
