--- a/PPCRental_Project/PPCRental_Project/Views/Home/About.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/About.cshtml
@@ -118,7 +118,11 @@
     <div style="width:100%; margin:0 auto; height:100%" id="six_bg">
         <div class="six_content_left" style="font-size:13px !important; line-height:18px">
 
-            <p><h1 style="font-family:'Segoe Marker';font-size:32px">Contact</h1></p>
+            <div class="row 0% images">
+                <div class="image from-right">
+                    <img src="~/Content/wp-content/themes/vpwtheme/images/Contact.PNG" />
+                </div>
+            </div>
             <p>
                 <b><img src="~/Content/wp-content/themes/vpwtheme/images/home.png" /></b>
                 45 Tran Hung Dao Street, District 1, Ho Chi Minh City
