--- a/PPCRental_Project/PPCRental_Project/Content/wp-content/themes/vpwtheme/css/style.css
+++ b/PPCRental_Project/PPCRental_Project/Content/wp-content/themes/vpwtheme/css/style.css
@@ -2119,8 +2119,8 @@ html[xmlns] .clearfix {
 		}
 
 			#work3 .row.images .image {
-				position: relative;
-				top: 0;
+				position: fixed;
+				top: 150px;
 				left: 0;
 				opacity: 1.0;
 
