Update menu about us

--- a/PPCRental_Project/PPCRental_Project/Views/Home/About.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Home/About.cshtml
@@ -48,9 +48,9 @@
             <div id="voudoo-menu">
                 <div class="menu-menu-chinh-container">
                     <ul id="menu-menu-chinh" class="menutop">
-                        <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="/trang-chu/">Home</a></li>
-                        <li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36"><a href="/vi-tri/">About Us</a></li>
-                        <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35"><a href="/tien-ich/">Log In</a></li>
+                        <li id="menu-item-38" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38"><a href="~/Home/Index">Home</a></li>
+                        <li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36"><a href="~/Home/About/">About Us</a></li>
+                        <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35"><a href="~/Account/Login">Log In</a></li>
                     </ul>
                 </div>
             </div>
@@ -150,7 +150,7 @@
     <div class="footer_content">
         <!--<div class="footer_left">-->
         <div style="float:left">
-            © 2017 = PPC Rental<div style="float:right; padding-top:0px; margin-left:10px;" class="flag">
+            © 2017 - PPC Rental - K21T3 - Team1<div style="float:right; padding-top:0px; margin-left:10px;" class="flag">
             </div>
         </div>
         <div class="footer_right">
