add funtion create and edit property type

--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -35,8 +35,16 @@
                         <i class="fa fa-fw fa-dashboard"></i>
                         <span class="nav-link-text">Manage Project</span>
                     </a>
-                
+                </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="">
+                    <a class="nav-link" href="/Admin/PropertyType">
+                        <i class="fa fa-fw fa-dashboard"></i>
+                        <span class="nav-link-text">Manage Property Type</span>
+                    </a>
+                </li>
             </ul>
+
+
             <ul class="navbar-nav sidenav-toggler">
                 <li class="nav-item">
                     <a class="nav-link text-center" id="sidenavToggler">
