fix wrong font and feature in post

--- a/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PPCRental_Project.Models.PROPERTY
+﻿@model PPCRental_Project.Models.PROPERTY_FEATURE
 
 @{
     ViewBag.Title = "Create";
@@ -21,14 +21,14 @@
             <hr />
             @Html.ValidationSummary(true)
             <div class="form-group">
-                @Html.LabelFor(model => model.PropertyName, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.PropertyName, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.PropertyName, new { @class = "form-control", placeholder = "Property Name", required = "required" })
-                    @Html.ValidationMessageFor(model => model.PropertyName)
+                    @Html.TextBoxFor(model => model.PROPERTY.PropertyName, new { @class = "form-control", placeholder = "Property Name", required = "required" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY.PropertyName)
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                  
                     <div style="margin-left: 50px;">
@@ -38,103 +38,112 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Images, new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.PROPERTY.Images, new { @class = "control-label col-md-4" })
                 <div class="col-md-4">
                     <label class="control-label">Select File</label>
                     <input name="ImageFile2" type="file" multiple>
                     
-                    @Html.ValidationMessageFor(model => model.Images)
+                    @Html.ValidationMessageFor(model => model.PROPERTY.Images)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.PropertyType_ID, "PropertyType_ID", new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.PROPERTY.PropertyType_ID, "PropertyType_ID", new { @class = "control-label col-md-4" })
                 <div class="col-md-4 input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon glyphicon-info-sign"></i></span>
                     @Html.DropDownList("PropertyType_ID", null, String.Empty, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.PropertyType_ID)
+                    @Html.ValidationMessageFor(model => model.PROPERTY.PropertyType_ID)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.Content, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.Content, new { @class = "form-control", placeholder = "Your Description", required = "required", rows = "10" })
-                    @Html.ValidationMessageFor(model => model.Content)
+                    @Html.TextAreaFor(model => model.PROPERTY.Content, new { @class = "form-control", placeholder = "Your Description", required = "required", rows = "10" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY.Content)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Street_ID, "Street", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.Street_ID, "Street", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("Street_ID", null, String.Empty, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Street_ID)
+                    @Html.ValidationMessageFor(model => model.PROPERTY.Street_ID)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Ward_ID, "Ward_ID", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.Ward_ID, "Ward_ID", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("Ward_ID", null, String.Empty, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Ward_ID)
+                    @Html.ValidationMessageFor(model => model.PROPERTY.Ward_ID)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.District_ID, "District", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.District_ID, "District", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                    @Html.DropDownList("District_ID", null, String.Empty, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.District_ID)
+                    @Html.ValidationMessageFor(model => model.PROPERTY.District_ID)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.Price, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.Price, new { @class = "form-control", placeholder = "Prices", required = "required" })
-                    @Html.ValidationMessageFor(model => model.Price)
+                    @Html.TextBoxFor(model => model.PROPERTY.Price, new { @class = "form-control", placeholder = "Prices", required = "required" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY.Price)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.UnitPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.UnitPrice, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.UnitPrice, new { @class = "form-control", placeholder = "Unit Price" })
-                    @Html.ValidationMessageFor(model => model.UnitPrice)
+                    @Html.TextBoxFor(model => model.PROPERTY.UnitPrice, new { @class = "form-control", placeholder = "Unit Price" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY.UnitPrice)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.Area, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.Area, new { @class = "form-control", placeholder = "Area", required = "required" })
-                    @Html.ValidationMessageFor(model => model.Area)
+                    @Html.TextBoxFor(model => model.PROPERTY.Area, new { @class = "form-control", placeholder = "Area", required = "required" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY.Area)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.BedRoom, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.BedRoom, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.BedRoom, new { @class = "form-control", placeholder = "Number Bedroom", required = "required" })
-                    @Html.ValidationMessageFor(model => model.BedRoom)
+                    @Html.TextBoxFor(model => model.PROPERTY.BedRoom, new { @class = "form-control", placeholder = "Number Bedroom", required = "required" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY.BedRoom)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.BathRoom, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.BathRoom, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.BathRoom, new { @class = "form-control", placeholder = "Number Bathroom", required = "required" })
-                    @Html.ValidationMessageFor(model => model.BathRoom)
+                    @Html.TextBoxFor(model => model.PROPERTY.BathRoom, new { @class = "form-control", placeholder = "Number Bathroom", required = "required" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY.BathRoom)
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.PackingPlace, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.PROPERTY.PackingPlace, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.PackingPlace, new { @class = "form-control", placeholder = "Number ParkingPlace", required = "required" })
-                    @Html.ValidationMessageFor(model => model.PackingPlace)
+                    @Html.TextBoxFor(model => model.PROPERTY.PackingPlace, new { @class = "form-control", placeholder = "Number ParkingPlace", required = "required" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY.PackingPlace)
                 </div>
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.FEATURE.ID, "Feature", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.ListBox("Feature_ID", (SelectList)ViewBag.Feature_ID, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.FEATURE.ID)
+                </div>
+            </div>
+
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
@@ -142,6 +151,10 @@
                 </div>
             </div>
         </div>
+        
+        
+        
+
     }
 
     <div>
