--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="">
-                    <a class="nav-link" href="/Admin/PropertyType">
+                    <a class="nav-link" href="~/Areas/Admin/PropertyType">                        
                         <i class="fa fa-fw fa-dashboard"></i>
                         <span class="nav-link-text">Manage Property Type</span>
                     </a>
