--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
@@ -90,3 +90,11 @@
     </div>
     <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
 </div>
+@if (TempData["edit"] != null)
+{
+    <script type="text/javascript">
+        window.onload = function () {
+            alert("@MvcHtmlString.Create(TempData["edit"] as string)");
+        };
+    </script>
+}
