--- a/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
@@ -147,9 +147,16 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" name="submit" value="Draf" class="btn btn-default" />
                 </div>
             </div>
+            
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" name="submit" value="Create" class="btn btn-default" />
+                </div>
+            </div>
+
         </div>
         
         
