--- a/PPCRental_Project/PPCRental_Project/Views/Account/Login.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Account/Login.cshtml
@@ -107,12 +107,19 @@
                     </div>
                 }
         </div>
-        <div class="cta"><a href="http://andytran.me">Forgot your password?</a></div>
     </div>
     
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://codepen.io/andytran/pen/vLmRVp.js'></script>
     <script src="~/Scripts/loginscripts.js"></script>
+    @if (TempData["changepassword"] != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                alert("@MvcHtmlString.Create(TempData["changepassword"] as string)");
+            };
+        </script>
+    }
 </body>
 </html>
 
