fix bug view admin status

--- a/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Admin/Views/PropertyAdmin/Index.cshtml
@@ -98,7 +98,7 @@
                             {
                                 ViewBag.status = "Hết hạn";
                             }
-                            
+                            <td>@ViewBag.status</td>
                             <td>
                                 
                                 <a href="~/Admin/PropertyAdmin/Details/@item.ID"><span class="glyphicon glyphicon-list-alt"></span></a><br />
