--- a/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Views/Shared/_Layout.cshtml
@@ -80,9 +80,19 @@
     <div class="container-fluid body-content">
         @RenderBody()
         <hr />
+       <div class="row">
+           <div class="col-md-8">
+               <h4 style="text-align:center">OurRealEstate</h4>
+               <iframe width="750" height="350" src="https://www.youtube.com/embed/negni3BiiT4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+           </div>
+           <div class="col-md-4">
+               <h4 style="text-align:center">MyLocation</h4>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3948.0356013403166!2d106.69107271953979!3d10.76280990887302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f16ae2cc46f%3A0xbbc7484836e09cf7!2zNDUgTmd1eeG7hW4gS2jhuq9jIE5odSwgQ8O0IEdpYW5nLCBRdeG6rW4gMSwgSOG7kyBDaMOtIE1pbmgsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1513845324477" width="400" height="350" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+       </div> 
         <div>
-            <p>&copy; @DateTime.Now.Year - PPC-Rental</p>
+            <p>&copy; @DateTime.Now.Year - PPC Rental - K21T3 - Team1</p>
         </div>
+
     </div>
 
 
