--- a/PPCRental_Project/PPCRental_Project/Content/Site.css
+++ b/PPCRental_Project/PPCRental_Project/Content/Site.css
@@ -67,6 +67,13 @@ input[type="checkbox"].input-validation-error {
 #btnfilter
 {
     width: 100%;
+    background-color: #008CBA;
+    border: none;
+    color: white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 16px;
 }
 #detail-header
 {
@@ -84,6 +91,10 @@ input[type="checkbox"].input-validation-error {
 }
 #btn-detail {
     margin-left: 25%;
+   border: none;
+   background-color: #008CBA;
+   color: white;
+
 }
 
 
