fix error listbox in post property

--- a/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Create.cshtml
@@ -66,13 +66,12 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Street_ID, "Street", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.District_ID, "District", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("Street_ID", null, String.Empty, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Street_ID)
+                    @Html.DropDownList("District_ID", null, String.Empty, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.District_ID)
                 </div>
             </div>
-
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
@@ -96,10 +95,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.District_ID, "District", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Street_ID, "Street", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("District_ID", null, String.Empty, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.District_ID)
+                    @Html.DropDownList("Street_ID", null, String.Empty, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Street_ID)
                 </div>
             </div>
 
@@ -148,8 +147,8 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.PROPERTY_FEATURE, "Feature", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("listfeature", new SelectList(ViewBag.feature, "ID", "FeatureName"), new { @class = "form-control", @multiple = "true" })
-                    @Html.ValidationMessageFor(model => model.PropertyType_ID)
+                    @Html.DropDownList("listfeature", (SelectList)ViewBag.feature, new { @class = "form-control", @multiple = "true" })
+                    @Html.ValidationMessageFor(model => model.PROPERTY_FEATURE)
                 </div>
             </div>
         </div>
