--- a/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Index.cshtml
@@ -1,122 +1,113 @@
 ﻿@model IEnumerable<PPCRental_Project.Models.PROPERTY>
 
 @{
-
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    if (Session["UserID"] == null)
-    {
-        Response.Redirect("~/Account/Login");
-    }
 }
 
-<!--Slider Bootstrap-->
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img class="img-rounded img-responsive" src="~/Images/1.jpg" />  >
-            <div class="carousel-caption">
-                ...
-            </div>
-        </div>
-        <div class="item">
-            <img class="img-rounded img-responsive" src="~/Images/2.jpg" />
-            <div class="carousel-caption">
-                ...
-            </div>
-        </div>
-        <div class="item">
-            <img class="img-rounded img-responsive" src="~/Images/3.jpg" />
-            <div class="carousel-caption">
-                ...
-            </div>
-        </div>
-    </div>
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-<!--End Slider Bootstrap-->
-<div class="container" id="viewandfilter">
-    <!--View List-->
-    <div class="col-sm-9 wow slideInLeft">
-        <div class="row">
-            @{
-                foreach (var item in Model)
-                {
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail projectcomponent">
-                            <img class="img-rounded img-responsive display-img" src="@Url.Content(item.Avatar)" alt="@item.PropertyName">
-                            <div class="caption">
-                                <!--Boundary of project title-->
-                                <div class="thumbnail-title">
-                                    @if (@item.PropertyName.Length > 36)
-                                    {
-                                        <h4>@item.PropertyName.Substring(0, 36)...</h4>
-                                    }
-                                    else
-                                    {
-                                        <h4>@item.PropertyName</h4>
-                                    }
-                                </div>
-                                <!--End Boundary of project title-->
-                                <!--Boundary of project short content-->
-                                <div class="thumbnail-content">
-                                    <!--Boundary of price-->
-                                    <p class="display-price">
-                                        <span class="glyphicons glyphicons-money"></span>
-                                        @item.Price @item.UnitPrice
-                                    </p>
-                                    <!--End Boundary of price-->
-                                    <!--Boundary of content-->
-                                    <p class="display-content">
-                                        @if (@item.Content.Length > 90)
-                                        {
-                                            @item.Content.Substring(0, 90)
-                                        }
-                                        else
-                                        {
-                                            @item.Content
-                                        }
 
-                                    </p>
-                                    <!--End Boundary of content-->
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.PropertyName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Avatar)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Content)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Area)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BedRoom)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BathRoom)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PackingPlace)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DISTRICT.DistrictName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.WARD.WardName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.STREET.StreetName)
+        </th>
 
-                                    <p>
-                                        <span class="glyphicon glyphicon-home"></span>                                                      @item.DISTRICT.DistrictName
-                                    </p>
-                                </div>
-                                <!--End Boundary of project short content-->
-                                <!--Boundary of Detail button-->
-                                <div class="thumbnail-footer">
-                                    <a href="~/Project/Detail/@item.ID" class="btn btn-primary" role="button" id="btn-detail">Xem chi tiết</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
+        <th>
+            @Html.DisplayNameFor(model => model.PROJECT_STATUS.Status_Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PROPERTY_TYPE.CodeType)
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.PropertyName)
+        </td>
+        <td>
+            <img class="img-rounded img-responsive display-img" src="@Url.Content(item.Avatar)" alt="@item.PropertyName">
+        </td>
+        <td>
+            @if (item.Content.Length < 50) 
+            {
+                ViewBag.content = item.Content;
             }
-        </div>
-    </div>
+            else 
+            {
+                ViewBag.content = item.Content.Substring(0, 50) + "...";
+                
+            }
+            @ViewBag.content
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Price)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Area)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BedRoom)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BathRoom)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PackingPlace)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DISTRICT.DistrictName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.WARD.WardName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.STREET.StreetName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PROJECT_STATUS.Status_Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PROPERTY_TYPE.CodeType)
+        </td>
 
-    @if (TempData["create"] != null)
-    {
-        <script type="text/javascript">
-        window.onload = function () {
-            alert("@MvcHtmlString.Create(TempData["create"] as string)");
-        };
-        </script>
-    }
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+        </td>
+    </tr>
+}
+
+</table>
