--- a/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Index.cshtml
@@ -103,9 +103,12 @@
         </td>
 
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @if (item.Status_ID == 2) 
+            {
+                @Html.ActionLink("Edit", "Edit", new { id=item.ID })
+            }
+            
+            @Html.ActionLink("Details", "Details", new { id=item.ID }) 
         </td>
     </tr>
 }
