update message create sucess index agency

--- a/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Index.cshtml
+++ b/PPCRental_Project/PPCRental_Project/Areas/Agency/Views/PropertyAgency/Index.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    if (Session["UserID"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
 }
 
 
@@ -114,3 +118,11 @@
 }
 
 </table>
+@if (TempData["create"] != null)
+{
+    <script type="text/javascript">
+        window.onload = function () {
+            alert("@MvcHtmlString.Create(TempData["create"] as string)");
+        };
+    </script>
+}
